# DeepuLang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USER_GUIDE.md  pyproject.toml
deepulang/: __init__.py  ast_nodes.py  cli.py  interpreter.py  lexer.py  parser.py  run_example.py  tokens.py
deepulang/examples/: hello.dpl
tests/: test_basic.py
