[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepulang"
version = "0.1.1"
description = "A minimal demo language (DeepuLang) with lexer, parser, interpreter"
authors = [{ name = "DeepuLang Authors" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["language", "interpreter", "demo", "dsl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Interpreters",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://github.com/Deepak-kumar2004/deepulang"
Repository = "https://github.com/Deepak-kumar2004/deepulang"
Issues = "https://github.com/Deepak-kumar2004/deepulang/issues"
Documentation = "https://github.com/Deepak-kumar2004/deepulang/blob/main/USER_GUIDE.md"

[project.scripts]
deepulang = "deepulang:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepulang*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build",
    "twine",
]

